fixed page collapse

--- a/static/custom.css
+++ b/static/custom.css
@@ -7,12 +7,13 @@ footer {
   height: 3rem;
   position: relative;
   overflow: hidden;
+  margin-top: auto;
 }
 footer .marquee {
   display: flex;
   align-items: center;
   width: max-content;
-  animation: scroll 25s linear infinite;
+  animation: scroll 35s linear infinite;
 }
 footer .marquee .marquee-content {
   display: flex;
@@ -559,7 +560,10 @@ html {
 }
 html body {
   margin: 0;
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 html body main {
   min-height: 100%;
