--- a/static/scss/templates/_base.scss
+++ b/static/scss/templates/_base.scss
@@ -5,7 +5,11 @@ html{
 
     body{
         margin: 0;
-        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-between;
+        min-height: 100vh;
+        
         main{
             min-height: 100%;
         }
